interface Shape {
    // All classes that implement Shape are required to have this method.    
    double calculateArea(); 
}